Bug 445775 - "Accessing uninitialized random source!" with h) chalk grainy
Summary: "Accessing uninitialized random source!" with h) chalk grainy
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 5.0.0-beta2
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
: 437990 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-11-19 20:47 UTC by wolthera
Modified: 2021-12-14 14:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2021-11-19 20:47:24 UTC
SUMMARY
Found a "Accessing uninitialized random source!" warning while testing resources. The culprit looks like it is in the 'mirror' option used by  h) chalk grainy. Dmitry has been requesting people to note these down when they happen, because they need to be fixed. Nothing major.


ADDITIONAL INFORMATION
Accessing uninitialized random source!
[
	0: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritaglobal.so.17(kisBacktrace()+0x4a) [0x7fc804bc6cea]
	1: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritaimage.so.17(KisPaintInformation::randomSource() const+0x164) [0x7fc804fe5ea4]
	2: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritalibpaintop.so.17(+0x11b545) [0x7fc7e42c5545]
	3: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritalibpaintop.so.17(KisDynamicSensor::parameter(KisPaintInformation const&, KisCubicCurve, bool)+0x2f) [0x7fc7e428597f]
	4: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritalibpaintop.so.17(KisCurveOption::computeValueComponents(KisPaintInformation const&) const+0xcc) [0x7fc7e426c32c]
	5: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritalibpaintop.so.17(KisCurveOption::computeSizeLikeValue(KisPaintInformation const&) const+0x2a) [0x7fc7e426caca]
	6: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritalibpaintop.so.17(KisPressureMirrorOption::apply(KisPaintInformation const&) const+0x5f) [0x7fc7e4298e7f]
	7: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritalibpaintop.so.17(KisCurrentOutlineFetcher::fetchOutline(KisPaintInformation const&, KisPinnedSharedPtr<KisPaintOpSettings>, QPainterPath const&, KisPaintOpSettings::OutlineMode const&, double, double, double, bool, double, double) const+0x5e8) [0x7fc7e42a1488]
	8: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritalibpaintop.so.17(KisBrushBasedPaintOpSettings::brushOutlineImpl(KisPaintInformation const&, KisPaintOpSettings::OutlineMode const&, double, double)+0x1a3) [0x7fc7e42a5ce3]
	9: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritalibpaintop.so.17(KisBrushBasedPaintOpSettings::brushOutline(KisPaintInformation const&, KisPaintOpSettings::OutlineMode const&, double)+0x2a) [0x7fc7e42a62ca]
	10: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritaui.so.17(KisToolPaint::getOutlinePath(QPointF const&, KoPointerEvent const*, KisPaintOpSettings::OutlineMode)+0xea) [0x7fc805b9a0aa]
	11: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritaui.so.17(KisToolPaint::requestUpdateOutline(QPointF const&, KoPointerEvent const*)+0x159) [0x7fc805b9bc79]
	12: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritaflake.so.17(KoToolProxy::mouseMoveEvent(KoPointerEvent*)+0x89) [0x7fc802aadad9]
	13: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritaflake.so.17(KoToolProxy::mouseMoveEvent(QMouseEvent*, QPointF const&)+0x34) [0x7fc802aadb54]
	14: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritaui.so.17(+0x375b26) [0x7fc8058d2b26]
	15: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritaui.so.17(KisInputManager::Private::handleCompressedTabletEvent(QEvent*)+0x7b) [0x7fc805d0e08b]
	16: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritaui.so.17(KisInputManager::slotCompressedMoveEvent()+0x1d) [0x7fc805d01add]
	17: /usr/lib/x86_64-linux-gnu/libQt5Core.so.5(+0x2ebdd0) [0x7fc803b69dd0]
	18: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritaglobal.so.17(KisSignalCompressor::tryEmitSignalSafely()+0x2d) [0x7fc804bf3e9d]
	19: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritaglobal.so.17(KisSignalCompressor::start()+0x128) [0x7fc804bf40c8]
	20: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritaui.so.17(KisInputManager::eventFilterImpl(QEvent*)+0x1b85) [0x7fc805d04d65]
	21: /usr/lib/x86_64-linux-gnu/libQt5Core.so.5(QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*)+0xa3) [0x7fc803b32ae3]
	22: /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5(QApplicationPrivate::notify_helper(QObject*, QEvent*)+0x72) [0x7fc80460cdb2]
	23: /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5(QApplication::notify(QObject*, QEvent*)+0x467) [0x7fc804615e77]
	24: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritaui.so.17(KisApplication::notify(QObject*, QEvent*)+0x2d) [0x7fc805dc223d]
	25: /usr/lib/x86_64-linux-gnu/libQt5Core.so.5(QCoreApplication::notifyInternal2(QObject*, QEvent*)+0x12a) [0x7fc803b32d7a]
	26: /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5(QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool)+0x1b7) [0x7fc8046150a7]
	27: /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5(+0x1cbf44) [0x7fc80466af44]
	28: /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5(+0x1cf264) [0x7fc80466e264]
	29: /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5(QApplicationPrivate::notify_helper(QObject*, QEvent*)+0x83) [0x7fc80460cdc3]
	30: /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5(QApplication::notify(QObject*, QEvent*)+0x1a8) [0x7fc804615bb8]
	31: /home/wolthera/krita/inst/lib/x86_64-linux-gnu/libkritaui.so.17(KisApplication::notify(QObject*, QEvent*)+0x2d) [0x7fc805dc223d]
	32: /usr/lib/x86_64-linux-gnu/libQt5Core.so.5(QCoreApplication::notifyInternal2(QObject*, QEvent*)+0x12a) [0x7fc803b32d7a]
	33: /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5(QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*)+0x698) [0x7fc803f164d8]
	34: /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5(QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*)+0x265) [0x7fc803f17b45]
	35: /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5(QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>)+0xac) [0x7fc803eef7ac]
	36: /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5(+0x77eae) [0x7fc7fdd5deae]
	37: /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0(g_main_context_dispatch+0x27d) [0x7fc800bcf17d]
	38: /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0(+0x52400) [0x7fc800bcf400]
	39: /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0(g_main_context_iteration+0x33) [0x7fc800bcf4a3]
	40: /usr/lib/x86_64-linux-gnu/libQt5Core.so.5(QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>)+0x62) [0x7fc803b8d5d2]
	41: /usr/lib/x86_64-linux-gnu/libQt5Core.so.5(QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>)+0x12b) [0x7fc803b3187b]
	42: /usr/lib/x86_64-linux-gnu/libQt5Core.so.5(QCoreApplication::exec()+0x94) [0x7fc803b39a34]
	43: krita(+0x9320) [0x56469fc60320]
	44: /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf3) [0x7fc8034b60b3]
	45: krita(+0xab4e) [0x56469fc61b4e]
]
Comment 1 Dmitry Kazakov 2021-11-22 15:16:21 UTC
Hi, Wolthera!

For some reason I cannot reproduce the warning with this brush. Do you remember if you did anything specific to get this warning?
Comment 2 wolthera 2021-11-22 19:09:42 UTC
No, I was just making a random mark to get the document to be set to 'modified' so I could test saving embedded palettes.
Comment 3 Dmitry Kazakov 2021-11-23 15:40:40 UTC
Okay, the problem happens only when trying to use Line Tool (or any tool derived directly from KisToolPaint, not from KisToolFreehand).
Comment 4 Dmitry Kazakov 2021-11-23 15:51:48 UTC
Git commit a3029b78abd29556e9da54e11e637793e3cecc19 by Dmitry Kazakov.
Committed on 23/11/2021 at 15:47.
Pushed by dkazakov into branch 'master'.

Fix initialization of KisPaintInformation for non-brush tools

M  +1    -0    libs/ui/tool/kis_tool_freehand.cc
M  +8    -1    libs/ui/tool/kis_tool_paint.cc

https://invent.kde.org/graphics/krita/commit/a3029b78abd29556e9da54e11e637793e3cecc19
Comment 5 Dmitry Kazakov 2021-11-23 15:52:11 UTC
Git commit 03c30c6fa62d7493adaf742d8be8acedf65b2dac by Dmitry Kazakov.
Committed on 23/11/2021 at 15:52.
Pushed by dkazakov into branch 'krita/5.0'.

Fix initialization of KisPaintInformation for non-brush tools
(cherry picked from commit a3029b78abd29556e9da54e11e637793e3cecc19)

M  +1    -0    libs/ui/tool/kis_tool_freehand.cc
M  +8    -1    libs/ui/tool/kis_tool_paint.cc

https://invent.kde.org/graphics/krita/commit/03c30c6fa62d7493adaf742d8be8acedf65b2dac
Comment 6 Halla Rempt 2021-12-14 14:37:03 UTC
*** Bug 437990 has been marked as a duplicate of this bug. ***