Fix initialization of KisPaintInformation for non-brush tools

BUG:445775
(cherry picked from commit a3029b78abd29556e9da54e11e637793e3cecc19)